# webasm-test

./: Cargo.toml  index.html
src/: lib.rs
