[package]
name = "hand-3d-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.8"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window", 
    "Document"
]

[lib]
crate-type = ["cdylib", "rlib"]